--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 body{
   background: #ccc;
 }
+a{
+  background: var(colorPrimario);
+}
 .container{
     width: 85%;
     height: 700px;
@@ -27,24 +30,17 @@ body{
   grid-template-columns: 1.2fr 3fr 1fr;
   grid-template-rows: 1fr;
 }
-.container-2 > #tb1{
-  margin: 0;
-  padding: 0;
+.container-2 > #tb1, #tb2, #tb3{
+  /* margin: 0;
+  padding: 0; */
   display: grid;
   grid-column: 1/-1;
   grid-row: 1;
   grid-template-columns: 1.2fr 3fr 1fr;
   grid-template-rows: 1fr;
 }
-.container-2 > #tb2{
-  margin: 0;
-  padding: 0;
-  display: grid;
-  grid-column: 1/-1;
-  grid-row: 1;
-  grid-template-columns: 1.2fr 3fr 1fr;
-  grid-template-rows: 1fr;
-}
+
+
 /* .container-2 > div > section{
   display: grid;
   grid-column: 2/-1;
@@ -172,4 +168,10 @@ header > #box-img > #logo{
   width: 77px;
   text-align: center;
   margin: auto !important;
+}
+#esilosSection2{
+  display: block;
+  padding: 20px;
+  background: dodgerblue;
+  margin: auto;
 }
