--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ a{
   grid-row: 1;
   grid-template-columns: 1.2fr 3fr 1fr;
   grid-template-rows: 1fr;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 
